--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,6 +18,93 @@ body {
   margin: 0;
   color: #244751;
   background-color: #eee;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+main {
+  width:450px;
+  margin: 0 auto;
+  background-color: white;
+  padding-top: 65px;
+}
+/*showtweet*/
+.tweet  {
+  margin:0 auto;
+  border-style:solid;
+  border-width:1px;
+  border-color: #A9A9A9;
+  margin-top:20px;
+  margin-right:2em;
+  margin-left: 2em;
+  border-radius: 10px;
+}
+
+.tweet {
+  opacity: .70;
+  z-index: 900;
+}
+
+.tweet:hover {
+  opacity: 1.0;
+
+}
+
+.show-tweet .tweet header {
+  height: 75px;
+
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: #eee;
+}
+.show-tweet .tweet header .profile-pic {
+  margin-left: 10px;
+  margin-right:10px;
+  margin-top: 10px;
+  margin bottom: 10px;
+  float:left;
+  border-radius: 10px;
+  height:57.59px;
+  width:57.59px;
+}
+
+.show-tweet .tweet header .username {
+  float:left;
+}
+
+.show-tweet .tweet header .twittername {
+  float:right;
+  margin-right: 10px;
+  color:grey;
+  font-size: 90%;
+}
+
+.show-tweet .tweet .twitterbody {
+  clear:both;
+  margin-left: 15px;
+}
+
+.show-tweet .tweet footer {
+  border-top: solid;
+  border-top-width:1px;
+  border-top-color: #eee;
+  height:35px;
+}
+.show-tweet .tweet footer .postdate{
+  float:left;
+  margin-bottom:10px;
+  margin-left: 10px;
+  line-height: .3;
+  font-size: 80%;
+}
+
+.show-tweet .tweet footer .links{
+  float:right;
+  margin-right: 10px;
+  margin-top: 15px;
+  width:20px;
+  height:14px;
+  line-height: .3em;
+  display:none;
 }
 
 /*
