--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -29,3 +29,35 @@
   line-height: 2.5;
 }
 
+#nav-bar .compose {
+  width: 100px;
+  height: 50px;
+  float:right;
+  line-height: 3;
+  margin-right: 35px;
+  border-color: #28adef;
+  border-style: solid;
+  border-width:1px;
+  text-align: center;
+  margin-top:15px;
+  background-color: #28adef;
+  border-radius: 5px;
+  display: inline;
+}
+
+#nav-bar .compose:hover {
+  width: 100px;
+  height: 50px;
+  float:right;
+  line-height: 3;
+  margin-right: 35px;
+  border-color: #28adef;
+  border-style: solid;
+  border-width:1px;
+  text-align: center;
+  margin-top:15px;
+  background-color: blue;
+  border-radius: 5px;
+  cursor:pointer;
+  display:inline;
+}
